# grid-backtester-v2

./: .editorconfig  .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260719_b7a1d2c3e4f5_create_users_datasets_and_price_bars.py  20260719_c8d2e4f6a1b7_create_backtest_result_persistence_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  errors.py  router.py
backend/app/auth/: __init__.py  dependencies.py  passwords.py  tokens.py
backend/app/backtests/: __init__.py  comparison.py  configuration.py  exports.py  history.py  pdf_report.py  persistence.py  projections.py  replay.py  serialization.py  service.py
backend/app/core/: __init__.py  config.py
backend/app/datasets/: __init__.py  management.py  preview_cache.py  preview_models.py  service.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/domain/: __init__.py  enums.py  models.py
backend/app/engine/: __init__.py  backtest.py  backtest_models.py  benchmark_models.py  benchmarks.py  costs.py  crossing.py  equity.py  equity_models.py  execution.py  execution_models.py  grid.py  grid_models.py  metric_models.py  metrics.py  path.py  path_models.py  segment.py  segment_models.py
backend/app/importing/: __init__.py  cleaning.py  cleaning_models.py  csv_parser.py  encoding.py  headers.py  tdx.py
backend/tests/: test_application.py  test_environment.py
backend/tests/api/: conftest.py  test_auth.py  test_backtest_create_api.py  test_backtest_export_api.py  test_backtest_history_api.py  test_backtest_pdf_export_api.py  test_backtest_replay_compare_api.py  test_dataset_management_api.py  test_dataset_preview_api.py  test_dataset_save_api.py  test_errors.py  test_health.py
backend/tests/auth/: test_passwords.py  test_tokens.py
backend/tests/backtests/: test_backtest_comparison_service.py  test_backtest_configuration_adapter.py  test_backtest_csv_exports.py  test_backtest_detail_projections.py  test_backtest_execution_service.py  test_backtest_history_service.py  test_backtest_json_export.py  (+4 more)
docs/: BLUEPRINT.md  (+1 more)
(+181 files in other folders)
